# cgn-ec

./: .env-example  .gitignore  README.md  config.example.yaml  docker-compose-local.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-api.txt  requirements-consumer.txt  requirements.txt  syslog.yaml
api/: main.py
api/cgnec_api/: config.py  dependencies.py  models.py
api/cgnec_api/crud/: __init__.py  address_mapping.py  admin.py  port_block_mapping.py  port_mapping.py  session_mapping.py
api/cgnec_api/views/: __init__.py  address_mappings.py  admin.py  deterministic_nat.py  port_block_mappings.py  port_mappings.py  session_mappings.py
configs/postgres/: postgres.conf
consumer/: app_single_process.py  db.py
consumer/consumer/: config.py  constants.py  models.py
consumer/consumer/handlers/: __init__.py  a10.py  f5.py  generic.py  juniper.py  nfware.py  sixwind.py
consumer/consumer/outputs/: __init__.py  http.py  influx.py  timescaledb.py
docker-entrypoint-initdb.d/: 1-init.sql
dockerfiles/: api.Dockerfile  consumer.Dockerfile  freeradius.Dockerfile
docs/: compression_examples.md  index.md  recommended_setup.md
docs/api/: index.md  openapi.json  python_sdk.md
docs/architecture/: api_hooks.md  collectors.md  consumers.md  further_look.md  general_design.md  handlers.md  message_queue.md  outputs.md  preprocessors.md  timescale_models.md
docs/architecture/producers/: netflow.md  radius_accounting.md  syslog.md
docs/contributing/: coding_style.md  please_read_first.md
docs/examples/: python_sdk.py
grafana/dashboards/: cgn_ec.json  kafka.json
producer/netflow/: kafka.conf  nfacctd.conf
producer/radius/: default-config  python3_mod_enabled
producer/radius/mods-enabled/: python3
producer/radius/python3/: kafka_producer.py
producer/radius/sites-enabled/: default
producer/syslog/: syslog-ng.conf
producer/syslog/cgn-ec.conf.d/: a10-thunder.conf  f5_bigip.conf  juniper.conf  sixwind.conf
producer/syslog/conf.d/: a10-thunder.conf  juniper.conf  nfware.conf  sixwind.conf
prometheus/: prometheus.yml
scripts/: local_copy.sh  timescale.sh
tests/radius/: nfware_port_block_mapping.template  nfware_port_mapping.template  nfware_session.template
