[tool.poetry]
name = "cgn-ec"
version = "0.1.0"
description = "CGN Event Correlation for ISPs"
authors = ["BSpendlove <8687668+BSpendlove@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.mkdocs.dependencies]
mkdocs-redoc-tag = "^0.1.0"
mkdocs-material = "^9.5.50"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
